--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>2048 | By Ekaliacid</title>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <script src="app.js"></script>
     </head>
@@ -13,6 +14,8 @@
             <span id="score">0</span>
         </div>
         <div id="result"></div>
-        <div class="grid"></div>
+        <div class="grid-container">
+            <div class="grid"></div>    
+        </div>
     </body>
 </html>
