--- a/index.html
+++ b/index.html
@@ -4,18 +4,26 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>2048 | By Ekaliacid</title>
-        <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Rubik&family=Kanit&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <script src="app.js"></script>
     </head>
     <body>
-        <div class="score-container">
-            <div class="score-title">score</div>
-            <span id="score">0</span>
-        </div>
-        <div id="result"></div>
-        <div class="grid-container">
-            <div class="grid"></div>    
+        <div class="parent-container">
+            <div class="info-container">
+                <div class="title-container"><h1>2048</h1></div>
+                <div class="score-container">
+                    <div class="score-title">score</div>
+                    <div id="score" class="the-score">0</div>
+                </div>
+                <div class="show-result">
+                    <div>Play <b>2048</b> game online!</div>
+                    <div id="result" >Join the tiles until you get <b>2048</b>!</div>
+                </div>
+            </div>
+
+            <div class="grid"></div>
+
         </div>
     </body>
 </html>
