--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta property="og:site_name" content="2048 Game" />
+        <meta property="og:title" content="2048 Game - Play it online!" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>2048 | By Ekaliacid</title>
+        <title>2048 Game | By Ekaliacid</title>
         <link href="https://fonts.googleapis.com/css2?family=Rubik&family=Kanit&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <script src="app.js"></script>
