--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
 
-            <div class="grid"></div>
+            <div id="swipeme" class="grid"></div>
 
         </div>
     </body>
